--- a/src/scss/base/_text-block.scss
+++ b/src/scss/base/_text-block.scss
@@ -93,8 +93,7 @@ h4 {
   line-height: $h4-line-height;
 }
 
-p,
-ul {
+p {
   font-size: $paragraph-font-size;
   line-height: $paragraph-line-height;
   margin-bottom: $paragraph-bottom-margin;
